# robodbg

./: .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.TXT  README.md  TODO.txt  build.bat  make.py  make_doxygen.cmd
bindings/: CMakeLists.txt  robodbg.nb.cpp  robodbg.pybind.cpp
cmake/: robodbgConfig.cmake.in
docs/: quickstart.md
examples/: crackMe.py  template.cpp  template.py  wardenDumpMoP.cpp  wardenScanWotlk.cpp  wardenScanWotlk.py  winapi.py
src/: CMakeLists.txt  debugger.breakpoints.cpp  debugger.callbacks.cpp  debugger.cpp  debugger.h  debugger.memory.cpp  debugger.plugins.cpp  debugger.registers.cpp  util.cpp  util.h
src/bindings/: robodbg.pybind.cpp
src/plugins/: CMakeLists.txt  basePlugin.h  freezer.cpp  freezer.h  imports.cpp  imports.h  plugins.h
tests/: make_tests.bat  testDebugger.cpp  testMe.c
wheel/: build.bat  build_x86.bat
wheel/src/robodbg/: __init__.py  debugger.py
